--- a/roboshop/frontend.yml
+++ b/roboshop/frontend.yml
@@ -7,28 +7,29 @@
         name: nginx
         state: latest
 
-#    echo -e "${color}Installing nginx${nocolor}"
-#    yum install nginx -y &>>/tmp/roboshop.log
-#    stat_check $?
-#
-#    echo -e "${color}Removing old app. content${nocolor}"
-#    rm -rf /usr/share/nginx/html/* >/tmp/roboshop.log
-#    stat_check $?
-#
-#    echo -e "${color}Downloading frontend content${nocolor}"
-#    curl -o /tmp/frontend.zip https://roboshop-artifacts.s3.amazonaws.com/frontend.zip &>>/tmp/roboshop.log
-#    stat_check $?
-#
-#    echo -e "${color}Extracting the content${nocolor}"
-#    cd /usr/share/nginx/html
-#    unzip /tmp/frontend.zip &>>/tmp/roboshop.log
-#    stat_check $?
-#
-#    echo -e "${color}Update Frontend Configuration${nocolor}"
-#    cp /home/centos/roboshop-shell/roboshop.conf /etc/nginx/default.d/roboshop.conf &>>/tmp/roboshop.log
-#    stat_check $?
-#
-#    echo -e "${color}Starting nginx server${nocolor}"
-#    systemctl enable nginx &>>/tmp/roboshop.log
-#    systemctl restart nginx &>>/tmp/roboshop.log
-#    stat_check $?
+    - name: Removing directory
+      ansible.builtin.file:
+        path: /usr/share/nginx/html
+        state: absent
+
+    - name: Create directory
+      ansible.builtin.file:
+        path: /usr/share/nginx/html
+        state: directory
+
+    - name: Download and Extracti frontend content
+      ansible.builtin.unarchive:
+        src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
+        dest: /usr/share/nginx/html
+        remote_src: yes
+
+    - name: Copy roboshop configuration
+      ansible.builtin.copy:
+        src: roboshop.conf
+        dest: /etc/nginx/default.d/roboshop.conf
+
+    - name: Starting nginx server
+      ansible.builtin.systemd:
+        state: restarted
+        enabled: true
+        name: nginx
