--- a/roboshop/frontend.yml
+++ b/roboshop/frontend.yml
@@ -17,7 +17,7 @@
         path: /usr/share/nginx/html
         state: directory
 
-    - name: Download and Extracti frontend content
+    - name: Download and Extract frontend content
       ansible.builtin.unarchive:
         src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
         dest: /usr/share/nginx/html
