--- a/06-loops.yml
+++ b/06-loops.yml
@@ -2,7 +2,7 @@
   hosts: localhost
   connection: local
   tasks:
-    - name: Print Hello Universe
+    - name: Print Fruit Name
       ansible.builtin.debug:
         msg: Fruit Name - {{ item }}
       loop:
@@ -10,3 +10,12 @@
         - orange
         - grape
         - watermelon
+
+    - name: Print Fruit Name with Quantity
+      ansible.builtin.debug:
+        msg: Fruit Name - {{ item.name }}, Quantity - {{ item.quantity }}
+      loop:
+        - { name: apple, quantity: 100 }
+        - { name: orange, quantity: 200 }
+        - { name: grape, quantity: 400 }
+        - { name: watermelon, quantity: 50 }
