--- a/03-vars.yml
+++ b/03-vars.yml
@@ -17,4 +17,4 @@
 
     - name: Print O/P
       ansible.builtin.debug:
-        msg: "{{ output | split(" ") }}"
+        msg: "{{ output.stdout | split(" ") }}"
